--- a/dashboard-1.html
+++ b/dashboard-1.html
@@ -514,7 +514,7 @@ body.side-warper .sidebar-warper nav.side-m ul.navbar-nav li a.nav-link {
     
   </div>
   <div style="height: auto;width: 100%;padding: 9px 0px;">
-    <strong class="py-2">Copyright &copy; 2022-2023 <a href="#">Microware</a>.</strong>
+    <strong class="py-2">Copyright &copy; 2022-2023 <a href="#">home.htmlware</a>.</strong>
     All rights reserved.
   </div>
  
