--- a/dashboard.html
+++ b/dashboard.html
@@ -192,7 +192,7 @@
                     <li class="text-center">
                       <div class="user-details">
                         <div>
-                        <img src="assets/images/cig-logo.png" style="width: 100%;">
+                        <img src="assets/images/ICDS-logo-main.png" style="width: 100%;">
                     </div>
                         <p class="mb-0">Micro Admin</p>
                         <small>Administrator</small>
@@ -648,7 +648,7 @@
           <a href="#">Administrator</a>
         </li>
         <li>
-          <a href="#">Login</a>
+          <a href="#">home.html</a>
         </li>
       </ul>
     </div>
