--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                     <li class="text-center">
                       <div class="user-details">
                         <div>
-                        <img src="assets/images/cig-logo.png" style="width: 100%;">
+                        <img src="assets/images/ICDS-logo-main.png" style="width: 100%;">
                     </div>
                         <!-- <p class="mb-0">Micro Admin</p>
                         <small>Administrator</small> -->
@@ -205,8 +205,8 @@
                         <div class="btn-group" style="width: 95%;">
                         <a href="login.html" class="btn btn-primary">
                           <i class="fa-solid fa-earth-oceania"></i> Protal</a>
-                        <a href="login.html" class="btn btn-success">
-                          <i class="fa-solid fa-globe"></i> Website</a>
+                        <!-- <a href="login.html" class="btn btn-success">
+                          <i class="fa-solid fa-globe"></i> Website</a> -->
                     </div>
                   </div>
                     </li>
